--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
  
     <div class="navbar-fixed">
-      <nav class="#0288d1 light-blue darken-2">
+      <nav class="#0288d1 light-blue darken-1">
         <div class="nav-wrapper">
           <div class="container section">
               <a href="#" class="brand-logo"><img src="logo_blanco.png" width="170" height="42"></a>
@@ -40,7 +40,7 @@
                     <div class="card-content">
                       <span class="card-title activator grey-text text-darken-4">APOYO ECONOMICO<i class="material-icons right">more_vert</i></span>
                       <!--p><a href="#">REQUISITOS</a></p-->
-                      <a class="waves-effect waves-light btn" href="apoyo_economico.jpg">REQUISITOS</a>
+                      <a class="waves-effect waves-light btn" href="apoyo_economico.php">REQUISITOS</a>
                     </div>
                     <div class="card-reveal">
                       <span class="card-title grey-text text-darken-4">APOYO ECONOMICO<i class="material-icons right">close</i></span>
@@ -125,29 +125,31 @@
     </div>
 
     <footer class="page-footer #0288d1 light-blue darken-1">
-        <div class="container ">
-          <div class="row">
-            <div class="col l6 s12">
-              <h5 class="white-text">DIRECCION DE BIENESTAR UNIVERSITARIO UAI</h5>
-              <p class="grey-text text-lighten-4">Gracias por ser parte de .... siguenos en nuestras redes sociales.</p>
-            </div>
-            <div class="col l4 offset-l2 s12">
-              <h5 class="white-text">Links</h5>
-              <ul>
-                <li><a class="grey-text text-lighten-3" href="#!">Facebook</a></li>
-                <li><a class="grey-text text-lighten-3" href="#!">Twitter</a></li>
-                <li><a class="grey-text text-lighten-3" href="#!">Whatsapp</a></li>
-              </ul>
-            </div>
+      <div class="container ">
+        <div class="row">
+          <div class="col l6 s12">
+            <h5 class="white-text">DIRECCION DE BIENESTAR UNIVERSITARIO UAI</h5>
+            <p class="grey-text text-lighten-4">Trabajando en beneficio del fortalecimiento de las habilidades y 
+                                                capacidades que permitan mejorar la calidad de vida de la comunidad
+                                                universitaria.</p>
+          </div>
+          <div class="col l4 offset-l2 s12">
+            <h5 class="white-text">Links</h5>
+            <ul>
+              <li><a class="grey-text text-lighten-3" href="https://www.facebook.com/uai.bienestaruniversitario">Facebook</a></li>
+              <li><a class="grey-text text-lighten-3" href="https://www.youtube.com/channel/UCzVNFeA9Av2Uz3JtRZYhqZQ">YouTube</a></li>
+              <li><a class="grey-text text-lighten-3" href="#!">Correo: bienestar.universitario@universidadautonoadeica.edu.pe</a></li>
+              
+            </ul>
           </div>
         </div>
-        <div class="footer-copyright #0288d1 light-blue darken-2">
-          <div class="container center">
-          © 2020 Copyright Text          
-          </div>
+      </div>
+      <div class="footer-copyright #0288d1 light-blue darken-2">
+        <div class="container center">
+        © 2020 Copyright Text          
         </div>
-      </footer>
-
+      </div>
+    </footer>
 
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js">
