--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <div class="card-content">
                       <span class="card-title activator grey-text text-darken-4">APOYO ECONOMICO<i class="material-icons right">more_vert</i></span>
                       <!--p><a href="#">REQUISITOS</a></p-->
-                      <a class="waves-effect waves-light btn" href="apoyo_economico.php">REQUISITOS</a>
+                      <a class="waves-effect waves-light btn" href="apoyo_economico.html">REQUISITOS</a>
                     </div>
                     <div class="card-reveal">
                       <span class="card-title grey-text text-darken-4">APOYO ECONOMICO<i class="material-icons right">close</i></span>
