--- a/carpeta_recategorizacion.html
+++ b/carpeta_recategorizacion.html
@@ -29,21 +29,25 @@
 
     <main>
         <div class="container section">
-            <center><h3 class="header">APOYO ECONÓMICO</h3></center>      
+            <center><h3 class="header">CARPETA DE RECATEGORIZACIÓN</h3></center>      
         </div>
           
         <div class="container section">
             <h4 >ADJUNTAR LOS REQUISITOS:</h4>
-            <div class="card-panel">
+            <div class="card-panel">                
                 <h5>1. Constancia de clasificación socieconómica según SISFOH: <a  href="https://operaciones.sisfoh.gob.pe/cse/">https://operaciones.sisfoh.gob.pe/cse/</a></h5>
-                
-                <h5>2. Ficha de Matrícula del periodo 2020-2 o documento que acredite el pago de matrícula</h5>
-                <h5>3. Boleta de Notas del semestre 2020-1 (El estudiante deberá de obtener un promedio ponderado mayor o igual a 15).</h5>
-                <h5>4. Documento que acredite el cumplimiento del pago de todas la pensiones (estado de cuenta o voucher quinta cuota).</h5>
-                <h5>5. Constancia del Seguro contra accidentes (vigente/ ESSALUD/ SIS/ Seguro Particular). Si el estudiante no cuenta con seguro activo, solicitar la afiliacion gratuita al servicio de salud (medico@autonomadeica.edu.pe)</h5>
-                <h5>6. Copia del carné de estudiante.</h5>
-                <h5>7. Voucher de pago derecho a Apoyo Económico (S/.15.00).</h5>
-                <h5>8. Copia del DNI.</h5>
+                <h5>2. Voucher de pago de la carpeta de recategorización.</h5>
+                <h5>3. Boleta de Notas del semestre 2020-1.</h5>
+                <h5>4. Ficha Socioeconómico del Estudiante.</h5>
+                <h5>5. Copia del carné de estudiante.</h5>
+                <h5>6. Copia del DNI </h5>
+                <h5>7. Ficha de Matrícula del periodo 2020-2 o documento que acredite el pago de matrícula</h5>
+                <h5>8. Declaración Jurada de no haber incurrido en acciones administrativas en agravio de la Universidad</h5>
+                <h5>9. Documento Sustentatorio Aspecto Familiar (Copia de DNI de todos los integrantes del hogar)</h5>
+                <h5>10. Documento Sustentatorio Aspecto Económico (Boleta de pagos de cada uno de los miembros de la familia que perciban ingresos, 2 últimos meses).</h5>
+                <h5>11. Documento Sustentatorio Aspecto Vivienda (Croquis de ubicación del domicilio especificando avenidas principales para la visita respectiva y recibo de luz, agua, teléfono, cable, Internet, fotografía de la vivienda).</h5>
+                <h5>12. Documento sustentatorio Aspecto Educativo (Copia del último recibo de pago del Semestre Anterior).</h5>
+                <h5>13. Documento Sustentatorio Aspecto Salud (Si hubiera algún familiar directo con alguna complicacion en su salud).</h5>
             </div>            
             <a class="waves-effect waves-light#0288d1 light-blue darken-2 btn" href="http://aulavirtual.autonomadeica.edu.pe/">POSTULA AQUI</a>
             </br></br>
@@ -79,8 +83,5 @@
       </footer>
 </body>
 </html>
-
-
-
 
 
