--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     <div class="card-content">
                       <span class="card-title activator grey-text text-darken-4">CARPETA RECATEGORIZACION<i class="material-icons right">more_vert</i></span>
                       <!--p><a href="#">REQUISITOS</a></p-->
-                      <a class="waves-effect waves-light btn" href="carpeta_recategorizacion.jpg">REQUISITOS</a>
+                      <a class="waves-effect waves-light btn" href="carpeta_recategorizacion.html">REQUISITOS</a>
                     </div>
                     <div class="card-reveal">
                       <span class="card-title grey-text text-darken-4">CARPETA RECATEGORIZACION<i class="material-icons right">close</i></span>
@@ -76,7 +76,7 @@
                     <div class="card-content">
                       <span class="card-title activator grey-text text-darken-4">BECA ORFANDAD<i class="material-icons right">more_vert</i></span>
                       <!--p><a href="#">REQUISITOS</a></p-->
-                      <a class="waves-effect waves-light btn" href="beca_orfandad2.jpg">REQUISITOS</a>
+                      <a class="waves-effect waves-light btn" href="#">REQUISITOS</a>
                     </div>
                     <div class="card-reveal">
                       <span class="card-title grey-text text-darken-4">BECA ORFANDAD<i class="material-icons right">close</i></span>
@@ -93,7 +93,7 @@
                     <div class="card-content">
                       <span class="card-title activator grey-text text-darken-4">BECA PRODAC<i class="material-icons right">more_vert</i></span>
                       <!--p><a href="#">REQUISITOS</a></p-->
-                      <a class="waves-effect waves-light btn" href="beca_prodac.jpg">REQUISITOS</a>
+                      <a class="waves-effect waves-light btn" href="beca_prodac.html">REQUISITOS</a>
                     </div>
                     <div class="card-reveal">
                       <span class="card-title grey-text text-darken-4">BECA PRODAC<i class="material-icons right">close</i></span>
@@ -107,15 +107,15 @@
             <div class="col l6 s12">
                 <div class="card">
                     <div class="card-image waves-effect waves-block waves-light">
-                      <img class="activator" src="beca_continuidad.jpg">
+                      <img class="activator" src="apoyo_covid19.jpg">
                     </div>
                     <div class="card-content">
-                      <span class="card-title activator grey-text text-darken-4">BECA CONTINUIDAD DE ESTUDIOS (PRONABEC)<i class="material-icons right">more_vert</i></span>
+                      <span class="card-title activator grey-text text-darken-4">APOYO AUTÓNOMA COVID19<i class="material-icons right">more_vert</i></span>
                       <!--p><a href="#">REQUISITOS</a></p-->
-                      <a class="waves-effect waves-light btn" href="beca_continuidad.jpg">REQUISITOS</a>
+                      <a class="waves-effect waves-light btn" href="#">REQUISITOS</a>
                     </div>
                     <div class="card-reveal">
-                      <span class="card-title grey-text text-darken-4">BECA CONTINUIDAD DE ESTUDIOS (PRONABEC)<i class="material-icons right">close</i></span>
+                      <span class="card-title grey-text text-darken-4">APOYO AUTÓNOMA COVID19<i class="material-icons right">close</i></span>
                       <p>Beneficio economico para estudiantes...</p>
                     </div>
                   </div>
