--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
                       <img class="activator" src="beca_orfandad2.jpg">
                     </div>
                     <div class="card-content">
-                      <span class="card-title activator grey-text text-darken-4">BECA ORFANDAD<i class="material-icons right">more_vert</i></span>
+                      <span class="card-title activator grey-text text-darken-4">BECA POR ORFANDAD<i class="material-icons right">more_vert</i></span>
                       <!--p><a href="#">REQUISITOS</a></p-->
-                      <a class="waves-effect waves-light btn" href="#">REQUISITOS</a>
+                      <a class="waves-effect waves-light btn" href="beca_orfandad.html">REQUISITOS</a>
                     </div>
                     <div class="card-reveal">
                       <span class="card-title grey-text text-darken-4">BECA ORFANDAD<i class="material-icons right">close</i></span>
@@ -112,7 +112,7 @@
                     <div class="card-content">
                       <span class="card-title activator grey-text text-darken-4">APOYO AUTÓNOMA COVID19<i class="material-icons right">more_vert</i></span>
                       <!--p><a href="#">REQUISITOS</a></p-->
-                      <a class="waves-effect waves-light btn" href="#">REQUISITOS</a>
+                      <a class="waves-effect waves-light btn" href="apoyo_covid19.html">REQUISITOS</a>
                     </div>
                     <div class="card-reveal">
                       <span class="card-title grey-text text-darken-4">APOYO AUTÓNOMA COVID19<i class="material-icons right">close</i></span>
