--- a/carpeta_recategorizacion.html
+++ b/carpeta_recategorizacion.html
@@ -49,7 +49,7 @@
                 <h5>12. Documento sustentatorio Aspecto Educativo (Copia del último recibo de pago del Semestre Anterior).</h5>
                 <h5>13. Documento Sustentatorio Aspecto Salud (Si hubiera algún familiar directo con alguna complicacion en su salud).</h5>
             </div>            
-            <a class="waves-effect waves-light#0288d1 light-blue darken-2 btn" href="http://aulavirtual.autonomadeica.edu.pe/">POSTULA AQUI</a>
+            <a class="waves-effect waves-light#0288d1 light-blue darken-2 btn" href="http://aulavirtual.autonomadeica.edu.pe/course/view.php?id=2673">POSTULA AQUI</a>
             </br></br>
         </div>
     </main>
