--- a/beca_orfandad.html
+++ b/beca_orfandad.html
@@ -55,7 +55,7 @@
                 <h5>El estudiante debe encontrarse matriculado en la fecha del fallecimiento del padre, madre o apoderado.</h5>
                 
             </div>            
-            <a class="waves-effect waves-light#0288d1 light-blue darken-2 btn" href="http://aulavirtual.autonomadeica.edu.pe/">POSTULA AQUI</a>
+            <a class="waves-effect waves-light#0288d1 light-blue darken-2 btn" href="http://aulavirtual.autonomadeica.edu.pe/course/view.php?id=2674">POSTULA AQUI</a>
             </br></br>
         </div>
     </main>
