--- a/beca_prodac.html
+++ b/beca_prodac.html
@@ -44,7 +44,7 @@
                 <h5>7. Copia del documento sustentatorio de la MODALIDAD DE BECA SOLICITADA (Documento que acredite que pertenece a algún club deportivo)</h5>
                 <h5>8. Constancia de la Evaluacion Psicológica(servicio.psicopedagogico@autonomadeica.edu.pe)</h5>
             </div>            
-            <a class="waves-effect waves-light#0288d1 light-blue darken-2 btn" href="http://aulavirtual.autonomadeica.edu.pe/">POSTULA AQUI</a>
+            <a class="waves-effect waves-light#0288d1 light-blue darken-2 btn" href="http://aulavirtual.autonomadeica.edu.pe/course/view.php?id=2675">POSTULA AQUI</a>
             </br></br>
         </div>
     </main>
