--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     </div>
                     <div class="card-reveal">
                       <span class="card-title grey-text text-darken-4">APOYO ECONOMICO<i class="material-icons right">close</i></span>
-                      <p>Beneficio economico automatico a los estudiantes con promedio ponderado aceptable (15).</p>
+                      <p>Beneficio económico otorgado a estudiantes con promedio ponderado mayor o igual a 15.</p>
                     </div>
                   </div>
             </div>
@@ -60,7 +60,9 @@
                     </div>
                     <div class="card-reveal">
                       <span class="card-title grey-text text-darken-4">CARPETA RECATEGORIZACION<i class="material-icons right">close</i></span>
-                      <p>Beneficio economico dirigido a estudiantes que se encuentren afectador economicamente.</p>
+                      <p>Los estudiantes beneficiados con esta modalidad son:</p>
+                      <p>• Estudiantes con situacion socieconomica vulnerable (no covid19)</p>
+                      <p>• Estudiante o familiar directo que presenten alguna complicacion en su salud</p>
                     </div>
                   </div>
             </div>
@@ -80,8 +82,7 @@
                     </div>
                     <div class="card-reveal">
                       <span class="card-title grey-text text-darken-4">BECA ORFANDAD<i class="material-icons right">close</i></span>
-                      <p>Beneficio economico para estudiantes que se encuentre en situacion
-                          de orfandad de sus apoderados afectados por la pandemia covid 19.</p>
+                      <p>Beneficio economico dirigido a estudiantes cuyo padre, madre o responsable economico fallecido (no covid19).</p>
                     </div>
                   </div>
             </div>
@@ -97,7 +98,7 @@
                     </div>
                     <div class="card-reveal">
                       <span class="card-title grey-text text-darken-4">BECA PRODAC<i class="material-icons right">close</i></span>
-                      <p>Beneficio economico dirigido a estudiantes deportistas de alto rendimiento.</p>
+                      <p>Beneficio economico dirigido a estudiantes deportistas de alto rendimiento que pertenecen a un club deportivo y participantes en eventos deprotivos oficiales representando a la universidad en el semestre académico 2019-2.</p>
                     </div>
                   </div>
             </div>
@@ -116,7 +117,10 @@
                     </div>
                     <div class="card-reveal">
                       <span class="card-title grey-text text-darken-4">APOYO AUTÓNOMA COVID19<i class="material-icons right">close</i></span>
-                      <p>Beneficio economico para estudiantes...</p>
+                      <p>Beneficio economico dirigido a:</p>
+                      <p>• Estudiantes que sean trabajadores sin renovación de contrato, empresarios independientes o prestadores de servicios profesionales que hayan cesado en su actividad económica o profesional.</p>
+                      <p>• Estudiantes que sean trabajadores y que hayan sufrido alguna modificación en su contrato laboral a causa de la crisis: reducción de jornada laboral, modificación de condiciones salariales y/o suspensión temporal de su contrato de trabajo.</p>
+                      <p>• Estudiantes que han perdido a su padre, madre o tutor responsable de su educación a causa del covid19.</p>
                     </div>
                   </div>
             </div>            
