--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
                       <img class="activator" src="apoyo_economico.jpg">
                     </div>
                     <div class="card-content">
-                      <span class="card-title activator grey-text text-darken-4">APOYO ECONOMICO<i class="material-icons right">more_vert</i></span>
+                      <span class="card-title activator grey-text text-darken-4">APOYO ECONÓMICO<i class="material-icons right">more_vert</i></span>
                       <!--p><a href="#">REQUISITOS</a></p-->
                       <a class="waves-effect waves-light btn" href="apoyo_economico.html">REQUISITOS</a>
                     </div>
                     <div class="card-reveal">
-                      <span class="card-title grey-text text-darken-4">APOYO ECONOMICO<i class="material-icons right">close</i></span>
+                      <span class="card-title grey-text text-darken-4">APOYO ECONÓMICO<i class="material-icons right">close</i></span>
                       <p>Beneficio económico otorgado a estudiantes con promedio ponderado mayor o igual a 15.</p>
                     </div>
                   </div>
@@ -54,15 +54,15 @@
                       <img class="activator" src="carpeta_recategorizacion.jpg">
                     </div>
                     <div class="card-content">
-                      <span class="card-title activator grey-text text-darken-4">CARPETA RECATEGORIZACION<i class="material-icons right">more_vert</i></span>
+                      <span class="card-title activator grey-text text-darken-4">CARPETA RECATEGORIZACIÓN<i class="material-icons right">more_vert</i></span>
                       <!--p><a href="#">REQUISITOS</a></p-->
                       <a class="waves-effect waves-light btn" href="carpeta_recategorizacion.html">REQUISITOS</a>
                     </div>
                     <div class="card-reveal">
-                      <span class="card-title grey-text text-darken-4">CARPETA RECATEGORIZACION<i class="material-icons right">close</i></span>
+                      <span class="card-title grey-text text-darken-4">CARPETA RECATEGORIZACIÓN<i class="material-icons right">close</i></span>
                       <p>Los estudiantes beneficiados con esta modalidad son:</p>
-                      <p>• Estudiantes con situacion socieconomica vulnerable (no covid19)</p>
-                      <p>• Estudiante o familiar directo que presenten alguna complicacion en su salud</p>
+                      <p>• Estudiantes con situación socieconómica vulnerable (no covid19)</p>
+                      <p>• Estudiante o familiar directo que presenten alguna complicación en su salud</p>
                     </div>
                   </div>
             </div>
@@ -82,7 +82,7 @@
                     </div>
                     <div class="card-reveal">
                       <span class="card-title grey-text text-darken-4">BECA ORFANDAD<i class="material-icons right">close</i></span>
-                      <p>Beneficio economico dirigido a estudiantes cuyo padre, madre o responsable economico fallecido (no covid19).</p>
+                      <p>Beneficio económico dirigido a estudiantes cuyo padre, madre o responsable económico fallecido (no covid19).</p>
                     </div>
                   </div>
             </div>
@@ -98,7 +98,7 @@
                     </div>
                     <div class="card-reveal">
                       <span class="card-title grey-text text-darken-4">BECA PRODAC<i class="material-icons right">close</i></span>
-                      <p>Beneficio economico dirigido a estudiantes deportistas de alto rendimiento que pertenecen a un club deportivo y participantes en eventos deprotivos oficiales representando a la universidad en el semestre académico 2019-2.</p>
+                      <p>Beneficio económico dirigido a estudiantes deportistas de alto rendimiento que pertenecen a un club deportivo y participantes en eventos deportivos oficiales representando a la universidad en el semestre académico 2019-2.</p>
                     </div>
                   </div>
             </div>
@@ -117,7 +117,7 @@
                     </div>
                     <div class="card-reveal">
                       <span class="card-title grey-text text-darken-4">APOYO AUTÓNOMA COVID19<i class="material-icons right">close</i></span>
-                      <p>Beneficio economico dirigido a:</p>
+                      <p>Beneficio económico dirigido a:</p>
                       <p>• Estudiantes que sean trabajadores sin renovación de contrato, empresarios independientes o prestadores de servicios profesionales que hayan cesado en su actividad económica o profesional.</p>
                       <p>• Estudiantes que sean trabajadores y que hayan sufrido alguna modificación en su contrato laboral a causa de la crisis: reducción de jornada laboral, modificación de condiciones salariales y/o suspensión temporal de su contrato de trabajo.</p>
                       <p>• Estudiantes que han perdido a su padre, madre o tutor responsable de su educación a causa del covid19.</p>
