--- a/carpeta_recategorizacion.html
+++ b/carpeta_recategorizacion.html
@@ -31,6 +31,12 @@
         <div class="container section">
             <center><h3 class="header">CARPETA DE RECATEGORIZACIÓN</h3></center>      
         </div>
+
+        <div class="container section">          
+            <h5><b>Los estudiantes beneficiados con esta modalidad son:</b></h5>
+            <h5><b>• Estudiantes con situación socieconómica vulnerable (no covid19)</b></h5>
+            <h5><b>• Estudiante o familiar directo que presenten alguna complicación en su salud</b></h5>                
+        </div>  
           
         <div class="container section">
             <h4 >ADJUNTAR LOS REQUISITOS:</h4>
