--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <div class="col l6 s12">
                 <div class="card">
                     <div class="card-image waves-effect waves-block waves-light">
-                      <img class="activator" src="beca_orfandad2.jpg">
+                      <img class="activator" src="beca_orfandad.jpg">
                     </div>
                     <div class="card-content">
                       <span class="card-title activator grey-text text-darken-4">BECA POR ORFANDAD<i class="material-icons right">more_vert</i></span>
