--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
  
     <div class="navbar-fixed">
-      <nav class="#0288d1 light-blue darken-1">
+      <nav class="white">
         <div class="nav-wrapper">
           <div class="container section">
               <a href="#" class="brand-logo"><img src="logo_blanco.png" width="170" height="42"></a>
@@ -128,7 +128,7 @@
 
     </div>
 
-    <footer class="page-footer #0288d1 light-blue darken-1">
+    <footer class="page-footer">
       <div class="container ">
         <div class="row">
           <div class="col l6 s12">
@@ -148,7 +148,7 @@
           </div>
         </div>
       </div>
-      <div class="footer-copyright #0288d1 light-blue darken-2">
+      <div class="footer-copyright">
         <div class="container center">
         © 2021 Copyright Text          
         </div>
@@ -158,6 +158,17 @@
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js">
     </script>
+       <style>
+      .nav-wrapper{
+        background-color: #00467A !important;
+        }
+        .page-footer{
+        background-color: #595959 !important;
+        }
+        .footer-copyright{
+        background-color: #212529 !important;
+        }
+    </style>
     <script>
          document.addEventListener('DOMContentLoaded', function() {
          var elems = document.querySelectorAll('.slider');
