--- a/apoyo_economico.html
+++ b/apoyo_economico.html
@@ -17,7 +17,7 @@
     
     <header>
         <div class="navbar-fixed">
-        <nav class="#0288d1 light-blue darken-1">
+        <nav class="white">
             <div class="nav-wrapper">
             <div class="container section">
                 <a href="index.html" class="brand-logo"><img src="logo_blanco.png" width="170" height="42"></a>
@@ -55,7 +55,7 @@
     </main>
     
 
-    <footer class="page-footer #0288d1 light-blue darken-1">
+    <footer class="page-footer">
         <div class="container ">
           <div class="row">
             <div class="col l6 s12">
@@ -75,12 +75,23 @@
             </div>
           </div>
         </div>
-        <div class="footer-copyright #0288d1 light-blue darken-2">
+        <div class="footer-copyright">
           <div class="container center">
           © 2020 Copyright Text          
           </div>
         </div>
       </footer>
+      <style>
+        .nav-wrapper{
+          background-color: #00467A !important;
+        }
+        .page-footer{
+          background-color: #595959 !important;
+        }
+        .footer-copyright{
+          background-color: #212529 !important;
+        }
+    </style>
 </body>
 </html>
 
