--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </div>
 
     <div class="container section">
-      <h3>BENEFICIOS ECONÓMICOS PARA ESTUDIANTES</h3>
+      <h3>BENEFICIOS ECONÓMICOS PARA ESTUDIANTES 2021</h3>
     </div>
    
     <div class="container section">
@@ -142,7 +142,7 @@
             <ul>
               <li><a class="grey-text text-lighten-3" href="https://www.facebook.com/uai.bienestaruniversitario">Facebook</a></li>
               <li><a class="grey-text text-lighten-3" href="https://www.youtube.com/channel/UCzVNFeA9Av2Uz3JtRZYhqZQ">YouTube</a></li>
-              <li><a class="grey-text text-lighten-3" href="#!">Correo: bienestar.universitario@universidadautonoadeica.edu.pe</a></li>
+              <li><a class="grey-text text-lighten-3" href="#!">Correo: bienestar.universitario@autonomadeica.edu.pe</a></li>
               
             </ul>
           </div>
