--- a/carpeta_recategorizacion.html
+++ b/carpeta_recategorizacion.html
@@ -42,18 +42,18 @@
             <h4 >ADJUNTAR LOS REQUISITOS:</h4>
             <div class="card-panel">                
                 <h5>1. Constancia de clasificación socieconómica según SISFOH: <a  href="https://operaciones.sisfoh.gob.pe/cse/">https://operaciones.sisfoh.gob.pe/cse/</a></h5>
-                <h5>2. Voucher de pago de la carpeta de recategorización.</h5>
-                <h5>3. Boleta de Notas del semestre 2020-1.</h5>
+                <h5>2. Voucher de pago de la carpeta de recategorización (S/.28.00).</h5>
+                <h5>3. Boleta de Notas del semestre 2020-2.</h5>
                 <h5>4. Ficha Socioeconómico del Estudiante.</h5>
-                <h5>5. Copia del carné de estudiante.</h5>
-                <h5>6. Copia del DNI </h5>
-                <h5>7. Ficha de Matrícula del periodo 2020-2 o documento que acredite el pago de matrícula</h5>
-                <h5>8. Declaración Jurada de no haber incurrido en acciones administrativas en agravio de la Universidad</h5>
-                <h5>9. Documento Sustentatorio Aspecto Familiar (Copia de DNI de todos los integrantes del hogar)</h5>
-                <h5>10. Documento Sustentatorio Aspecto Económico (Boleta de pagos de cada uno de los miembros de la familia que perciban ingresos, 2 últimos meses).</h5>
-                <h5>11. Documento Sustentatorio Aspecto Vivienda (Croquis de ubicación del domicilio especificando avenidas principales para la visita respectiva y recibo de luz, agua, teléfono, cable, Internet, fotografía de la vivienda).</h5>
-                <h5>12. Documento sustentatorio Aspecto Educativo (Copia del último recibo de pago del Semestre Anterior).</h5>
-                <h5>13. Documento Sustentatorio Aspecto Salud (Si hubiera algún familiar directo con alguna complicacion en su salud).</h5>
+             
+                <h5>5. Copia del DNI </h5>
+                <h5>6. Ficha de Matrícula del periodo 2020-2 o documento que acredite el pago de matrícula</h5>
+                <h5>7. Declaración Jurada de no haber incurrido en acciones administrativas en agravio de la Universidad</h5>
+                <h5>8. Documento Sustentatorio Aspecto Familiar (Copia de DNI de todos los integrantes del hogar)</h5>
+                <h5>9. Documento Sustentatorio Aspecto Económico (Boleta de pagos de cada uno de los miembros de la familia que perciban ingresos, 2 últimos meses o declaración jurada simple del total de ingresos persibidos).</h5>
+                <h5>10. Documento Sustentatorio Aspecto Vivienda (Croquis de ubicación del domicilio especificando avenidas principales para la visita respectiva y recibo de luz, agua, teléfono, cable, Internet, fotografía de la vivienda).</h5>
+                <h5>11. Documento sustentatorio Aspecto Educativo (Copia del último recibo de pago del Semestre Anterior).</h5>
+                <h5>12. Documento Sustentatorio Aspecto Salud (Si hubiera algún familiar directo con alguna complicacion en su salud).</h5>
             </div>            
             <a class="waves-effect waves-light#0288d1 light-blue darken-2 btn" href="http://aulavirtual.autonomadeica.edu.pe/course/view.php?id=2673">POSTULA AQUI</a>
             </br></br>
