--- a/carpeta_recategorizacion.html
+++ b/carpeta_recategorizacion.html
@@ -44,7 +44,7 @@
                 <h5>1. Constancia de clasificación socieconómica según SISFOH: <a  href="https://operaciones.sisfoh.gob.pe/cse/">https://operaciones.sisfoh.gob.pe/cse/</a></h5>
                 <h5>2. Voucher de pago de la carpeta de recategorización (S/.28.00).</h5>
                 <h5>3. Boleta de Notas del semestre 2020-2.</h5>
-                <h5>4. Ficha Socioeconómico del Estudiante.</h5>
+                <h5>4. Ficha Socioeconómico del Estudiante: <a  href="https://https://drive.google.com/uc?export=download&id=1sc5OaHthuxhFfZQonU-ZMHbyQglZ15WY>Descarga Formato</a></h5>
              
                 <h5>5. Copia del DNI </h5>
                 <h5>6. Ficha de Matrícula del periodo 2020-2 o documento que acredite el pago de matrícula</h5>
