--- a/carpeta_recategorizacion.html
+++ b/carpeta_recategorizacion.html
@@ -41,7 +41,7 @@
         <div class="container section">
             <h4 >ADJUNTAR LOS REQUISITOS:</h4>
             <div class="card-panel">                
-                <h5>1. Constancia de clasificación socieconómica según SISFOH: <a  href="https://operaciones.sisfoh.gob.pe/cse/">[Abrir Enlace]</u></a></h5>
+                <h5>1. Constancia de clasificación socieconómica según SISFOH: <a  href="https://operaciones.sisfoh.gob.pe/cse/" target="_blank">[Abrir Enlace]</u></a></h5>
                 <h5>2. Voucher de pago de la carpeta de recategorización (S/.28.00).</h5>
                 <h5>3. Boleta de Notas del semestre 2020-2.</h5>
                 <h5>4. Ficha Socioeconómico del Estudiante: <a  href="https://drive.google.com/uc?export=download&id=1sc5OaHthuxhFfZQonU-ZMHbyQglZ15WY">[Descargue Aqui]</a></h5>
