--- a/carpeta_recategorizacion.html
+++ b/carpeta_recategorizacion.html
@@ -44,11 +44,11 @@
                 <h5>1. Constancia de clasificación socieconómica según SISFOH: <a  href="https://operaciones.sisfoh.gob.pe/cse/" target="_blank">[Abrir Enlace]</u></a></h5>
                 <h5>2. Voucher de pago de la carpeta de recategorización (S/.28.00).</h5>
                 <h5>3. Boleta de Notas del semestre 2020-2.</h5>
-                <h5>4. Ficha Socioeconómico del Estudiante: <a  href="https://drive.google.com/uc?export=download&id=18lLLB9dlGNyUIxp0mWFRWcDAAmb-pBCo">[Descargue Aqui]</a></h5>
+                <h5>4. Ficha Socioeconómico del Estudiante: <a  href="https://drive.google.com/uc?export=download&id=1Yuk9Yv12HgW5bUigYoeFBscDP5eTawb8">[Descargue Aqui]</a></h5>
              
                 <h5>5. Copia del DNI </h5>
                 <h5>6. Ficha de Matrícula del periodo 2021-1 o documento que acredite el pago de matrícula</h5>
-                <h5>7. Declaración Jurada de no haber incurrido en acciones administrativas en agravio de la Universidad</h5>
+                <h5>7. Declaración Jurada de no haber incurrido en acciones administrativas en agravio de la Universidad: <a  href="https://drive.google.com/uc?export=download&id=18lLLB9dlGNyUIxp0mWFRWcDAAmb-pBCo">[Descargue Aqui]</a></h5>
                 <h5>8. Documento Sustentatorio Aspecto Familiar (Copia de DNI de todos los integrantes del hogar)</h5>
                 <h5>9. Documento Sustentatorio Aspecto Económico (Boleta de pagos de cada uno de los miembros de la familia que perciban ingresos, 2 últimos meses o declaración jurada simple del total de ingresos persibidos).</h5>
                 <h5>10. Documento Sustentatorio Aspecto Vivienda (Croquis de ubicación del domicilio especificando avenidas principales para la visita respectiva y recibo de luz, agua, teléfono, cable, Internet, fotografía de la vivienda).</h5>
