--- a/beca_orfandad.html
+++ b/beca_orfandad.html
@@ -39,7 +39,7 @@
         <div class="container section">
             <h4 >ADJUNTAR LOS REQUISITOS:</h4>
             <div class="card-panel">
-                <h5>1. Constancia de clasificación socieconómica según SISFOH: <a  href="https://operaciones.sisfoh.gob.pe/cse/">https://operaciones.sisfoh.gob.pe/cse/</a></h5>
+                <h5>1. Constancia de clasificación socieconómica según SISFOH: <a  href="https://operaciones.sisfoh.gob.pe/cse/" target="_blank">[Abrir Enlace]</a></h5>
                 
                 <h5>2. Ficha de Matrícula del periodo 2021-1 o documento que acredite el pago de matrícula</h5>
                 <h5>3. Boleta de Notas del semestre 2020-2 (El estudiante deberá de obtener un promedio ponderado mayor o igual a 16.80).</h5>
