--- a/apoyo_economico.html
+++ b/apoyo_economico.html
@@ -49,7 +49,7 @@
                 <h5>6. Voucher de pago derecho a Apoyo Económico (S/.15.00).</h5>
                 <h5>7. Copia del DNI.</h5>
             </div>            
-            <a class="waves-effect waves-light#0288d1 light-blue darken-2 btn" href="http://aulavirtual.autonomadeica.edu.pe/course/view.php?id=2647">POSTULA AQUI</a>
+            <a class="waves-effect waves-light#0288d1 light-blue darken-2 btn" href="https://aulavirtual.autonomadeica.edu.pe/course/view.php?id=2952">POSTULA AQUI</a>
             </br></br>
         </div>
     </main>
